# namefyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/name-tools/: SKILL.md
src/namefyi/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_engine.py  test_mcp.py
