[project]
name = "namefyi"
version = "0.1.2"
description = "Pure Python naming engine — Korean romanization, Five Elements compatibility, CJK stroke count. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "korean",
    "romanization",
    "hangul",
    "five-elements",
    "names",
    "naming",
    "cjk",
    "stroke-count",
    "ohaeng",
    "hanja",
    "kanji",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["namefyi[api,cli,mcp]"]

[project.scripts]
namefyi = "namefyi.cli:app"

[project.entry-points."mcp.servers"]
namefyi = "namefyi.mcp_server:mcp"

[project.urls]
Homepage = "https://namefyi.com"
"Name Explorer" = "https://namefyi.com/culture/korean/"
Documentation = "https://namefyi.com/developers/"
Repository = "https://github.com/fyipedia/namefyi"
Issues = "https://github.com/fyipedia/namefyi/issues"
Changelog = "https://github.com/fyipedia/namefyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/namefyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]  # __all__ grouped by category

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
